VSE: Crash in IMB_colormanagement_transform_threaded when rendering this clip #71300

Closed
opened 2019-11-02 17:35:07 +01:00 by Hank · 10 comments

System Information
Operating system: Arch Linux
Graphics card: Intel Integrated

Blender Version
Broken: 2.80
Worked: 2.70-ish

Short description of error

When rendering the attached project, Blender will open the render window for a few seconds before crashing.

This blend file was created with a pre-2.80 version of Blender, which might be relevant.

Stack trace in /tmp/clip.crash.txt:

 Blender 2.80 (sub 75), Commit date: 2019-07-29 14:47, Hash f6cb5f54494e

# backtrace
blender(BLI_system_backtrace+0x34) [0x555719c94854]
blender(+0xc9f765) [0x555719a69765]
/usr/lib/libc.so.6(+0x3bfb0) [0x7f889e033fb0]
blender(+0xefd7dc) [0x555719cc77dc]
blender(IMB_colormanagement_transform_threaded+0x24) [0x555719cc7e34]
blender(BKE_sequencer_imbuf_from_sequencer_space+0x4f) [0x555719bb34ff]
blender(+0xf6b795) [0x555719d35795]
blender(RE_RenderFrame+0xe1) [0x555719d36101]
blender(+0x26b7be5) [0x55571b481be5]
blender(+0x10bf133) [0x555719e89133]
/usr/lib/libpthread.so.0(+0x94cf) [0x7f889e1cd4cf]
/usr/lib/libc.so.6(clone+0x43) [0x7f889e0f72d3]

Exact steps for others to reproduce the error

  • Extract the attached zip file: blender-bug.zip
  • Navigate down the subdirectories and open clip.blend
  • Press F12 to begin rendering
**System Information** Operating system: Arch Linux Graphics card: Intel Integrated **Blender Version** Broken: 2.80 Worked: 2.70-ish **Short description of error** When rendering the attached project, Blender will open the render window for a few seconds before crashing. This blend file was created with a pre-2.80 version of Blender, which might be relevant. Stack trace in /tmp/clip.crash.txt: ``` Blender 2.80 (sub 75), Commit date: 2019-07-29 14:47, Hash f6cb5f54494e # backtrace blender(BLI_system_backtrace+0x34) [0x555719c94854] blender(+0xc9f765) [0x555719a69765] /usr/lib/libc.so.6(+0x3bfb0) [0x7f889e033fb0] blender(+0xefd7dc) [0x555719cc77dc] blender(IMB_colormanagement_transform_threaded+0x24) [0x555719cc7e34] blender(BKE_sequencer_imbuf_from_sequencer_space+0x4f) [0x555719bb34ff] blender(+0xf6b795) [0x555719d35795] blender(RE_RenderFrame+0xe1) [0x555719d36101] blender(+0x26b7be5) [0x55571b481be5] blender(+0x10bf133) [0x555719e89133] /usr/lib/libpthread.so.0(+0x94cf) [0x7f889e1cd4cf] /usr/lib/libc.so.6(clone+0x43) [0x7f889e0f72d3] ``` **Exact steps for others to reproduce the error** - Extract the attached zip file: [blender-bug.zip](https://archive.blender.org/developer/F7903849/blender-bug.zip) - Navigate down the subdirectories and open clip.blend - Press F12 to begin rendering
Author

Added subscriber: @ThisIsntReal

Added subscriber: @ThisIsntReal
Member

Added subscribers: @iss, @lichtwerk

Added subscribers: @iss, @lichtwerk
Member

Can confirm, checking...

Seems like Render->pipeline_scene_eval and Render->pipeline_depsgraph are NULL, causing trouble later...

1  colormanagement_transform_ex             colormanagement.c 1918 0x30ff7ff      
2  IMB_colormanagement_transform_threaded   colormanagement.c 1972 0x30ff97a      
3  BKE_sequencer_imbuf_from_sequencer_space sequencer.c       595  0x2f14a24      
4  do_render_seq                            pipeline.c        1631 0x317bb69      
5  do_render_all_options                    pipeline.c        1718 0x317bfec      
6  RE_RenderFrame                           pipeline.c        2128 0x317d0d8      
7  render_startjob                          render_internal.c 668  0x7f1dc64      
8  do_job_thread                            wm_jobs.c         383  0x338f91b      
9  tslot_thread_start                       threads.c         260  0x309f002      
10 start_thread                                                    0x7ffff485f4c0 
11 clone                                                           0x7ffff1bab553 

CC @iss

Can confirm, checking... Seems like `Render->pipeline_scene_eval` and `Render->pipeline_depsgraph` are NULL, causing trouble later... ``` 1 colormanagement_transform_ex colormanagement.c 1918 0x30ff7ff 2 IMB_colormanagement_transform_threaded colormanagement.c 1972 0x30ff97a 3 BKE_sequencer_imbuf_from_sequencer_space sequencer.c 595 0x2f14a24 4 do_render_seq pipeline.c 1631 0x317bb69 5 do_render_all_options pipeline.c 1718 0x317bfec 6 RE_RenderFrame pipeline.c 2128 0x317d0d8 7 render_startjob render_internal.c 668 0x7f1dc64 8 do_job_thread wm_jobs.c 383 0x338f91b 9 tslot_thread_start threads.c 260 0x309f002 10 start_thread 0x7ffff485f4c0 11 clone 0x7ffff1bab553 ``` CC @iss
Philipp Oeser changed title from Crash in MB_colormanagement_transform_threaded when rendering this clip to VSE: Crash in IMB_colormanagement_transform_threaded when rendering this clip 2019-11-04 14:16:08 +01:00

There is scene strip using a host scene.

If this is the cause of crash, I would deal with this by fixing actual files with versioning code, so we don't drag historic issues to new releases. This may break some files so should be done carefully though.

There is scene strip using a host scene. If this is the cause of crash, I would deal with this by fixing actual files with versioning code, so we don't drag historic issues to new releases. This may break some files so should be done carefully though.

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

@iss do you want to fix this? If so, please assign to yourself. Otherwise I'll take a stab at it.

@iss do you want to fix this? If so, please assign to yourself. Otherwise I'll take a stab at it.
Richard Antalik self-assigned this 2019-12-04 07:04:43 +01:00

@dr.sybren I will try to apply my depsgraph-fu. this will probably be just bad "initialization" of scene_eval I assume.

Can I assign you as reviewee of patch?

@dr.sybren I will try to apply my depsgraph-fu. this will probably be just bad "initialization" of scene_eval I assume. Can I assign you as reviewee of patch?

Sure!

Sure!

This issue was referenced by a1b3effd55

This issue was referenced by a1b3effd55f775643e99b17865e36c506e9bdc90

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:39:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71300
No description provided.